tests/testcases/errors/BCE0087-1.boo
"""
BCE0087-1.boo(7,5): BCE0087: Can't create instance of enum 'Foo'.
"""
enum Foo:
	Bar
	
f = Foo()
